Adde probe link to navigation

--- a/templates/base.html
+++ b/templates/base.html
@@ -171,6 +171,7 @@
       <nav>
         <a href="/">Home</a>
         <a href="https://github.com/mitjafelicijan" target="_blank">Code</a>
+        <a href="https://github.com/mitjafelicijan/probe" target="_blank">Probe</a>
         <a href="/assets/mitjafelicijan.pgp.pub.txt">PGP</a>
         <a href="/assets/urls.txt">Blogroll</a>
         <a href="/curriculum-vitae.html">CV</a>
