Made site less in width

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
         background: white;
         line-height: 1.3;
         font-family: sans-serif;
-        max-width: 760px;
+        max-width: 700px;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
@@ -58,6 +58,7 @@
 
       h1 {
         font-size: xx-large;
+		line-height: 110%;
       }
 
       mark { padding: 0 0.3em; background-color: chartreuse; }
@@ -82,6 +83,7 @@
         overflow-x: auto;
         padding: 1em;
         background: var(--code-background)!important;
+		border: 1px solid black;
       }
 
       code {
