--- a/templates/base.html
+++ b/templates/base.html
@@ -131,6 +131,7 @@
       pre { margin-block-start: 1em; margin-block-end: 1em; }
 
       section.quick-jump { display: grid; gap: 1em; margin-top: 1em; grid-template-columns: 1fr 1fr; }
+      section.quick-jump input { font-family: sans-serif; }
       
       .promobox {        
         margin-top: 1em;
