Added jbmafp to the projects page

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,10 @@
         color: #ffffff;
       }
 
+	  html {
+        scroll-padding: 2rem;
+	  }
+
       body {
         padding: 1em;
         background: white;
