Changed color of code blocks

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <style>
       :root {
         --link-color: blue;
-        --code-background: #efefef;
+        --code-background: #fafafa;
         --code-border: #aaa;
         --inline-code-background: #efefef;
       }
