--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,11 @@
 			pre { background: #f5f5f5 !important; text-wrap: wrap; padding: 0.5em; }
 			code { background: #f5f5f5; }
 			table { width: 100%; }
+			.two-columns { display: flex; gap: 5em; }
 			@media only screen and (max-width: 720px) {
 				body { display: block; }
 				main { margin: 1em 0; }
+				.two-columns { display: block; }
 				.hide-on-mobile { display: none; }
 			}
 			/* Fixes embeds going to center. */
@@ -37,12 +39,12 @@
 			<strong>About</strong>
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="/projects.html">Recent projects</a></li>
+				<li><a href="/projects.html">Recent Projects</a></li>
 				<li><a href="https://github.com/mitjafelicijan" target="_blank">Code on GitHub</a></li>
 				<li><a href="https://github.com/mitjafelicijan/probe" target="_blank">Probe repository</a></li>
-				<li><a href="https://github.com/mitjafelicijan/dotfiles" target="_blank">My dotfiles</a></li>
-				<li><a href="/curriculum-vitae.html">CV</a></li>
-				<li><a href="/feed.xml">RSS</a></li>
+				<li class="hide-on-mobile"><a href="https://github.com/mitjafelicijan/dotfiles" target="_blank">My dotfiles</a></li>
+				<li><a href="/curriculum-vitae.html">Curriculum Vitae</a></li>
+				<li class="hide-on-mobile"><a href="/feed.xml">RSS Feed</a></li>
 			</ul>
 		</aside>
 
