Update to style

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
 <div>
 	<h2>Visualizations and exploration of binary files</h2>
 	<p>
-		Examine graphical representations of binary files using diagrams that illustrate connections between pairs of bytes (digraphs) and triplets of bytes (trigraphs).
+	<a href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">Examine graphical representations of binary files</a>
+		using diagrams that illustrate connections between pairs of bytes (digraphs) and triplets of bytes (trigraphs).
 		Check out the <a href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">project page<a>.
 	</p>
 	<div>
