--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
 			pre { background: #f5f5f5 !important; text-wrap: wrap; padding: 0.5em; }
 			code { background: #f5f5f5; }
 			table { width: 100%; }
+			figure { margin: 0; }
 			.two-columns { display: flex; gap: 5em; }
 			@media only screen and (max-width: 720px) {
 				body { display: block; }
