Added a bit of html tags

--- a/templates/note.html
+++ b/templates/note.html
@@ -5,8 +5,10 @@
 
 {{ define "content" }}
 <article>
-	<h1>{{ .Page.Title }}</h1>
-	<p><cap>{{ .Page.Type }}</cap>, {{ .Page.Created.Format "Jan 2, 2006" }}, on <a href="{{ .Config.BaseURL }}">{{ .Config.Title }}'s blog</a></p>
+	<hgroup>
+		<h1>{{ .Page.Title }}</h1>
+		<p><cap>{{ .Page.Type }}</cap>, {{ .Page.Created.Format "Jan 2, 2006" }}, on <a href="{{ .Config.BaseURL }}">{{ .Config.Title }}'s blog</a></p>
+	</hgroup>
 	<div>{{ .Page.HTML }}</div>
 </article>
 
