Changed listing on index

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,11 +19,11 @@
 			code { background: #f5f5f5; }
 			table { width: 100%; }
 			figure { margin: 0; }
-			.two-columns { display: flex; gap: 3em; }
+			.flow { max-width: 1100px; column-count: 2; column-gap: 20px; }
 			@media only screen and (max-width: 720px) {
 				body { display: block; }
 				main { margin: 1em 0; }
-				.two-columns { display: block; }
+				.flow { column-count: 1; }
 				.hide-on-mobile { display: none; }
 			}
 			/* Fixes embeds going to center. */
