Changed listing on index

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
 			code { background: #f5f5f5; }
 			table { width: 100%; }
 			figure { margin: 0; }
-			.flow { max-width: 1100px; column-count: 2; column-gap: 20px; }
-			@media only screen and (max-width: 720px) {
+			.flow { max-width: 1100px; column-count: 2; column-gap: 1em; }
+			@media only screen and (max-width: 860px) {
 				body { display: block; }
 				main { margin: 1em 0; }
 				.flow { column-count: 1; }
