--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,8 @@
 			table { width: 100%; }
 			figure { margin: 0; }
 			.flow { max-width: 1100px; column-count: 2; column-gap: 1em; }
+			.tags { display: inline-flex; gap: 0.2em; padding-right: 0.2em; font-family: monospace; }
+			.tags mark { padding: 0 0.2em; font-size: small; }
 			@media only screen and (max-width: 860px) {
 				body { display: block; }
 				main { margin: 1em 0; }
