--- a/templates/note.html
+++ b/templates/note.html
@@ -20,7 +20,11 @@
 		{{ range .Pages | filterbytype "note" | random 15 }}
 			{{ if not .Draft }}
 				<li>
-					{{ range .Meta.tags }}<mark>{{ . }}</mark>{{ end }}
+					{{ if .Meta.tags }}
+						<div class="tags">
+						{{ range .Meta.tags }}<mark>{{ . }}</mark>{{ end }}
+						</div>
+					{{ end }}
 					<a href="{{ .RelPermalink }}">{{ .Title }}</a>
 				</li>
 			{{ end }}
