--- a/templates/base.html
+++ b/templates/base.html
@@ -19,13 +19,15 @@
 			code { background: #f5f5f5; }
 			table { width: 100%; }
 			figure { margin: 0; }
-			.flow { max-width: 1100px; column-count: 2; column-gap: 1em; }
+			.flow-two-column > ul { max-width: 1100px; column-count: 2; column-gap: 1em; }
+			.flow-three-column > ul { max-width: 1100px; column-count: 3; column-gap: 1em; }
 			.tags { display: inline-flex; gap: 0.2em; padding-right: 0.2em; font-family: monospace; }
 			.tags mark { padding: 0 0.2em; font-size: small; }
 			@media only screen and (max-width: 860px) {
 				body { display: block; }
 				main { margin: 1em 0; }
-				.flow { column-count: 1; }
+				.flow-two-column > ul { column-count: 1; }
+				.flow-three-column > ul { column-count: 1; }
 				.hide-on-mobile { display: none; }
 			}
 			/* Fixes embeds going to center. */
@@ -46,6 +48,7 @@
 				<li><a href="https://github.com/mitjafelicijan" target="_blank">Code on GitHub</a></li>
 				<li><a href="https://github.com/mitjafelicijan/probe" target="_blank">Probe repository</a></li>
 				<li class="hide-on-mobile"><a href="https://github.com/mitjafelicijan/dotfiles" target="_blank">My dotfiles</a></li>
+				<li><a href="/bookmarks.html">Bookmarks</a></li>
 				<li><a href="/curriculum-vitae.html">Curriculum Vitae</a></li>
 				<li class="hide-on-mobile"><a href="/feed.xml">RSS Feed</a></li>
 			</ul>
