--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 			img, video, audio { max-width: 100%; }
 			pre { background: #f5f5f5 !important; text-wrap: wrap; padding: 0.5em; }
 			code { background: #f5f5f5; }
+			li { break-inside: avoid-column; }
 			table { width: 100%; }
 			figure { margin: 0; }
 			.flow-two-column > ul { max-width: 1100px; column-count: 2; column-gap: 3em; }
