--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 			.flow-two-column > ul { max-width: 1100px; column-count: 2; column-gap: 3em; }
 			.flow-three-column > ul { max-width: 1100px; column-count: 3; column-gap: 3em; }
 			.tags { display: inline-flex; gap: 0.2em; padding-right: 0.2em; font-family: monospace; }
-			.tags mark { padding: 0 0.2em; font-size: small; }
+			.tags mark { padding: 0 0.2em; }
 			@media only screen and (max-width: 860px) {
 				body { display: block; }
 				main { margin: 1em 0; }
