--- a/templates/base.html
+++ b/templates/base.html
@@ -42,17 +42,30 @@
 	<body>
 		<aside>
 			<p>You do not learn by relaxing. You learn by violently assaulting your problem until it surrenders its mysteries to you.</p>
-			<strong>About</strong>
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/projects.html">Recent Projects</a></li>
-				<li><a href="https://github.com/mitjafelicijan" target="_blank">Code on GitHub</a></li>
-				<li><a href="https://github.com/mitjafelicijan/probe" target="_blank">Probe repository</a></li>
-				<li class="hide-on-mobile"><a href="https://github.com/mitjafelicijan/dotfiles" target="_blank">My dotfiles</a></li>
-				<li><a href="/bookmarks.html">Bookmarks</a></li>
-				<li><a href="/curriculum-vitae.html">Curriculum Vitae</a></li>
-				<li class="hide-on-mobile"><a href="/feed.xml">RSS Feed</a></li>
-			</ul>
+			<div>
+				<strong>About</strong>
+				<ul>
+					<li><a href="/">Home</a></li>
+					<li><a href="/projects.html">Recent Projects</a></li>
+					<li><a href="https://github.com/mitjafelicijan" target="_blank">Code on GitHub</a></li>
+					<li><a href="https://github.com/mitjafelicijan/probe" target="_blank">Probe repository</a></li>
+					<li class="hide-on-mobile"><a href="https://github.com/mitjafelicijan/dotfiles" target="_blank">My dotfiles</a></li>
+					<li><a href="/bookmarks.html">Bookmarks</a></li>
+					<li><a href="/curriculum-vitae.html">Curriculum Vitae</a></li>
+					<li class="hide-on-mobile"><a href="/feed.xml">RSS Feed</a></li>
+				</ul>
+			</div>
+
+			<div class="hide-on-mobile">
+				<strong>Tools & Projects</strong>
+				<ul>
+					<li><a href="https://mitjafelicijan.github.io/gguf-list/">GGUF model list</a></li>
+					<li><a href="https://mitjafelicijan.github.io/symbols/">Symbol explorer</a></li>
+					<li><a href="https://mitjafelicijan.github.io/hextorgba/">HEX to RGBA</a></li>
+					<li><a href="https://mitjafelicijan.github.io/binary-visualization/">Binary Visualizations</a></li>
+					<li><a href="https://mitjafelicijan.github.io/mapsofdoom/">Maps of Doom</a></li>
+				</ul>
+			</div>
 		</aside>
 
 		<main>
