--- a/templates/base.html
+++ b/templates/base.html
@@ -59,11 +59,11 @@
 			<div class="hide-on-mobile">
 				<strong>Tools & Projects</strong>
 				<ul>
-					<li><a href="https://mitjafelicijan.github.io/gguf-list/">GGUF model list</a></li>
-					<li><a href="https://mitjafelicijan.github.io/symbols/">Symbol explorer</a></li>
-					<li><a href="https://mitjafelicijan.github.io/hextorgba/">HEX to RGBA</a></li>
-					<li><a href="https://mitjafelicijan.github.io/binary-visualization/">Binary Visualizations</a></li>
-					<li><a href="https://mitjafelicijan.github.io/mapsofdoom/">Maps of Doom</a></li>
+					<li><a href="https://mitjafelicijan.github.io/gguf-list/" target="_blank">GGUF model list</a></li>
+					<li><a href="https://mitjafelicijan.github.io/symbols/" target="_blank">Symbol explorer</a></li>
+					<li><a href="https://mitjafelicijan.github.io/hextorgba/" target="_blank">HEX to RGBA</a></li>
+					<li><a href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">Binary Visualizations</a></li>
+					<li><a href="https://mitjafelicijan.github.io/mapsofdoom/" target="_blank">Maps of Doom</a></li>
 				</ul>
 			</div>
 		</aside>
