--- a/templates/base.html
+++ b/templates/base.html
@@ -57,9 +57,10 @@
 			</div>
 
 			<div class="hide-on-mobile">
-				<strong>Tools & Projects</strong>
+				<strong>Tools & Fun Stuff</strong>
 				<ul>
 					<li><a href="https://mitjafelicijan.github.io/gguf-list/" target="_blank">GGUF model list</a></li>
+					<li><a href="https://github.com/mitjafelicijan/godot-experiments" target="_blank">Godot experiments</a></li>
 					<li><a href="https://mitjafelicijan.github.io/symbols/" target="_blank">Symbol explorer</a></li>
 					<li><a href="https://mitjafelicijan.github.io/hextorgba/" target="_blank">HEX to RGBA</a></li>
 					<li><a href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">Binary Visualizations</a></li>
