--- a/templates/base.html
+++ b/templates/base.html
@@ -61,9 +61,10 @@
 				<ul>
 					<li><a href="https://mitjafelicijan.github.io/gguf-list/" target="_blank">GGUF model list</a></li>
 					<li><a href="https://github.com/mitjafelicijan/godot-experiments" target="_blank">Godot experiments</a></li>
+					<li><a href="https://github.com/mitjafelicijan/blpconvert" target="_blank">BLP converter</a></li>
 					<li><a href="https://mitjafelicijan.github.io/symbols/" target="_blank">Symbol explorer</a></li>
 					<li><a href="https://mitjafelicijan.github.io/hextorgba/" target="_blank">HEX to RGBA</a></li>
-					<li><a href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">Binary Visualizations</a></li>
+					<li><a href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">Binary visualizations</a></li>
 					<li><a href="https://mitjafelicijan.github.io/mapsofdoom/" target="_blank">Maps of Doom</a></li>
 				</ul>
 			</div>
