Added new tool link

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,7 @@
 			<div class="hide-on-mobile">
 				<strong>Tools & Fun Stuff</strong>
 				<ul>
+					<li><a href="https://github.com/mitjafelicijan/newsbarge" target="_blank">Newsbarge RSS rader</a></li>
 					<li><a href="https://mitjafelicijan.github.io/gguf-list/" target="_blank">GGUF model list</a></li>
 					<li><a href="https://github.com/mitjafelicijan/godot-experiments" target="_blank">Godot experiments</a></li>
 					<li><a href="https://github.com/mitjafelicijan/blpconvert" target="_blank">BLP converter</a></li>
