Added Hairy Tales ebook

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,7 @@
 					<li><a href="https://mitjafelicijan.github.io/hextorgba/" target="_blank">HEX to RGBA</a></li>
 					<li><a href="https://mitjafelicijan.github.io/binary-visualization/" target="_blank">Binary visualizations</a></li>
 					<li><a href="https://mitjafelicijan.github.io/mapsofdoom/" target="_blank">Maps of Doom</a></li>
+					<li><a href="/assets/general/mitja-felicijan-hairytales.pdf" target="_blank">Hairy Tales</a></li>
 				</ul>
 			</div>
 		</aside>
