Added gif animation

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
 
 	<body>
 		<aside>
+			<div><img src="/assets/general/animation.gif"></div>
 			<p>You do not learn by relaxing. You learn by violently assaulting your problem until it surrenders its mysteries to you.</p>
 			<div>
 				<strong>About</strong>
