Added new link to the sidebar

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 		<style>
 			html { scroll-padding: 2rem; }
-			body { display: grid; gap: 2em; grid-template-columns: 14em auto; max-width: 100vw; line-height: 130%; }
+			body { display: grid; gap: 2em; grid-template-columns: 16em auto; max-width: 100vw; line-height: 130%; }
 			h1, h2, h3, h4, h5, h6 { line-height: 120%; }
 			img, video, audio { max-width: 100%; }
 			pre { background: #f5f5f5 !important; text-wrap: wrap; padding: 0.5em; }
@@ -60,6 +60,7 @@
 			<div class="hide-on-mobile">
 				<strong>Tools & Fun Stuff</strong>
 				<ul>
+					<li><a href="https://github.com/mitjafelicijan/oberon" target="_blank">Oberon - OpenResty Template</a></li>
 					<li><a href="https://github.com/mitjafelicijan/newsbarge" target="_blank">Newsbarge RSS rader</a></li>
 					<li><a href="https://mitjafelicijan.github.io/gguf-list/" target="_blank">GGUF model list</a></li>
 					<li><a href="https://github.com/mitjafelicijan/godot-experiments" target="_blank">Godot experiments</a></li>
