--- a/templates/note.html
+++ b/templates/note.html
@@ -4,33 +4,42 @@
 {{ define "description" }}{{ .Page.Summary }}{{ end }}
 
 {{ define "content" }}
+
 <article>
 	<hgroup>
 		<h1>{{ .Page.Title }}</h1>
-		<p><cap>{{ .Page.Type }}</cap>, {{ .Page.Created.Format "Jan 2, 2006" }}, on <a href="{{ .Config.BaseURL }}">{{ .Config.Title }}'s blog</a></p>
+		<p><span class="capitalize">{{ .Page.Type }}</span>, {{ .Page.Created.Format "Jan 2, 2006" }}, on <a href="{{ .Config.BaseURL }}">{{ .Config.Title }}'s blog</a></p>
 	</hgroup>
-	<div>{{ .Page.HTML }}</div>
+	{{ .Page.HTML }}
 </article>
 
-<div>
-	<br><hr>
-	<p><big><strong>Other notes</strong></big></p>
-	<ul itemscope itemtype="https://schema.org/SiteNavigationElement" role="list" aria-label="Other notes">
-		<meta itemprop="name" content="Other notes">
-		{{ range .Pages | filterbytype "note" | random 15 }}
-			{{ if not .Draft }}
-				<li>
-					{{ if .Meta.tags }}
-						<div class="tags">
-						{{ range .Meta.tags }}<mark>{{ . }}</mark>{{ end }}
-						</div>
-					{{ end }}
-					<a href="{{ .RelPermalink }}">{{ .Title }}</a>
-				</li>
+<section>
+	<h2>Other notes</h2>
+	<table>
+		<thead>
+			<tr>
+				<th>Date</th>
+				<th>Title</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+			{{ range .Pages | filterbytype "note" | random 15 }}
+				{{ if not .Draft }}
+				<tr>
+					<td><time datetime="{{ .Created.Format "2006-01-02" }}">{{ .Created.Format "2006-01-02" }}</time></td>
+					<td><a href="{{ .RelPermalink }}">{{ .Title }}</a></td>
+					<td class="tags">
+						{{ if .Meta.tags }}
+							{{ range .Meta.tags }}<mark>{{ . }}</mark>{{ end }}
+						{{ end }}
+					</td>
+				</tr>
+				{{ end }}
 			{{ end }}
-		{{ end }}
-	</ul>
-</div>
+		</tbody>
+	</table>
+</section>
 
 {{ if .Page.Meta.mathjax }}
 	<script src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js" async></script>
